--- a/salty-studio.html
+++ b/salty-studio.html
@@ -120,7 +120,7 @@
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
                 <div class="col-md-9 col-sm-9">
-                    <h3>Nicolas Constanty</h3>
+                    <h3><a>Nicolas Constanty</a></h3>
                     <h4>Game Developer</h4>
                     <p>Lorem Ipsum !</p>
                 </div>
@@ -128,7 +128,7 @@
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-right fade-in">
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
-                    <h3>Quentin Gasparotto</h3>
+                    <h3><a>Quentin Gasparotto</a></h3>
                     <h4>Master Chorizo</h4>
                     <p>Fervent défenseur du label "fait maison", la légende raconte qu'il à un jour mangé un autre plat
                         que "pâtes au chorizo". Il prépare dans l'ombre un plan machiavélique afin de plonger l'humanité
@@ -144,7 +144,7 @@
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/victor.gouet.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
                 <div class="col-md-5 col-sm-5">
-                    <h3>Victor Gouet</h3>
+                    <h3><a>Victor Gouet</a></h3>
                     <h4>Super Salty</h4>
                     <p>Successeur de l'empire de Jose Bove. Défenseur du Trial Poursuite. Aspirant à devenir le meilleur dresseur.</p>
                 </div>
@@ -152,7 +152,7 @@
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-right fade-in">
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
-                    <h3>Fernand Veyrier</h3>
+                    <h3><a href="https://fernandveyrier.github.io/">Fernand Veyrier</a></h3>
                     <h4>Game Developer, Stagiaire Fullstack</h4>
                     <p>Passioné de jeu-vidéo, pro Unity. Il ne manquera pas de vous rappeler que le mot "Engine" se prononce
                         ˈendʒɪn, ou encore N-Gine. Il est tellement diabolique que la légende raconte que Satan l'habite.</p>
@@ -167,7 +167,7 @@
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/bastien.dhiver.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
                 <div class="col-md-5 col-sm-5">
-                    <h3>Bastien Dhiver</h3>
+                    <h3><a>Bastien Dhiver</a></h3>
                     <h4>Monsieur Libre et Open Source</h4>
                     <p>Homme de la situation en matière de sécurité, fier défenseur des projets libres/open source et promoteur du chiffrement, il ne dit pas crypter mais chiffrer.</p>
                 </div>
@@ -175,12 +175,18 @@
 
             <div class="col-md-12 col-sm-12 item-list-right fade-in">
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
-                    <h3>Adrien Wery</h3>
+                    <h3><a>Adrien Wery</a></h3>
                     <h4>Amoureux de la gastronomie</h4>
                     <p>Lorem Ipsum !</p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/adrien.wery.jpg" class="image-whoami-right image-fullsize center-div">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t31.0-8/13392248_1132273070163595_8577037019231394565_o.jpg?oh=f7d42fa546557aac11993feb485da368&oe=591A0B92" class="image-fullsize">
                 </div>
             </div>
 
