--- a/salty-studio.html
+++ b/salty-studio.html
@@ -119,10 +119,10 @@
                 <div class="col-md-3 col-sm-3">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
-                <div class="col-md-9 col-sm-9">
+                <div class="col-md-5 col-sm-5">
                     <h3><a>Nicolas Constanty</a></h3>
                     <h4>Game Developer</h4>
-                    <p>Lorem Ipsum !</p>
+                    <p>Ses deux points communs avec Batman ? Sa couleur, et le fait qu'il travaille la nuit. Master Blender et Gimp, mais il programme aussi.</p>
                 </div>
             </div>
 
@@ -177,7 +177,7 @@
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
                     <h3><a>Adrien Wery</a></h3>
                     <h4>Amoureux de la gastronomie</h4>
-                    <p>Lorem Ipsum !</p>
+                    <p>Il ne manque aucune raclette, et il vénère Cinema4D. C'est toujours la boîte de nuit dans son casque !</p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/adrien.wery.jpg" class="image-whoami-right image-fullsize center-div">
