swap content discover

--- a/discover.html
+++ b/discover.html
@@ -96,9 +96,8 @@
             <nav class="subnav">
                 <div class="container">
                     <ul class="nav nav-pills">
-                        <li role="presentation" class="active"><a href="#architecture" data-scroll="architecture">Architecture</a>
-                        </li>
                         <li role="presentation"><a href="#flow" data-scroll="flow">Flux d'exécution</a></li>
+                        <li role="presentation" class="active"><a href="#architecture" data-scroll="architecture">Architecture</a></li>
                         <li role="presentation"><a href="#interactions" data-scroll="interactions">Interactions</a></li>
                     </ul>
                 </div>
@@ -106,22 +105,6 @@
 
         </div>
         <div class="wrapper">
-            <section class="row" id="architecture" data-anchor="architecture">
-                <div class="col-md-12">
-                    <h2>L'architecture</h2>
-		            <p>Voici deux diagrammes de classes qui modélisent l'architecture de SaltAPI.</p>
-                    <div class="col-md-6 image-presentation">
-                        <a href="#architecture" class="pop">
-                            <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/APIClassDiagram.png" class="image-fullsize">
-                        </a>
-                    </div>
-                    <div class="col-md-6 image-presentation">
-                        <a href="#architecture" class="pop">
-                            <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/HTTPClassDiagram.png" class="image-fullsize">
-                        </a>
-                    </div>
-                </div>
-            </section>
 
             <section class="row" id="flow" data-anchor="flow">
                 <div class="col-md-12">
@@ -190,8 +173,25 @@
                 </div>
             </section>
 
-            <section class="row" id="interactions" data-anchor="interactions">
+            <section class="row" id="architecture" data-anchor="architecture">
                 <div class="col-md-12">
+                    <h2>L'architecture</h2>
+                    <p>Voici deux diagrammes de classes qui modélisent l'architecture de SaltAPI.</p>
+                    <div class="col-md-6 image-presentation">
+                        <a href="#architecture" class="pop">
+                            <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/APIClassDiagram.png" class="image-fullsize">
+                        </a>
+                    </div>
+                    <div class="col-md-6 image-presentation">
+                        <a href="#architecture" class="pop">
+                            <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/HTTPClassDiagram.png" class="image-fullsize">
+                        </a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="row" id="interactions" data-anchor="interactions">
+                <div class="col-md-12" style="margin-bottom: 150px">
                     <h2>Les interactions</h2>
 		    <p>C'est ici que vous découvrez les interactions entre les différents modules de SaltAPI.</p>
                     <div class="col-md-6 image-presentation">
