--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                         <a href="#module">Implémenter un module</a>
                     </li>
                     <li>
+                        <a href="salty-studio.html">Team</a>
+                    </li>
+                    <li>
                         <a href="#contact">Participer</a>
                     </li>
                     <li>
@@ -238,6 +241,10 @@
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
                             <a href="#module">Implémenter un module</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="salty-studio.html">Team</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
