--- a/salty-studio.html
+++ b/salty-studio.html
@@ -52,6 +52,9 @@
                     <a href="module.html">Implémenter un module</a>
                 </li>
                 <li>
+                    <a href="salty-studio.html">Team</a>
+                </li>
+                <li>
                     <a href="index.html#contact">Participer</a>
                 </li>
                 <li>
@@ -117,18 +120,18 @@
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-left fade-in">
                 <div class="col-md-3 col-sm-3">
-                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-left image-fullsize center-div">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/bastien.dhiver.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
                 <div class="col-md-5 col-sm-5">
-                    <h3><a>Nicolas Constanty</a></h3>
-                    <h4>Game Developer</h4>
-                    <p>Ses deux points communs avec Batman ? Sa couleur, et le fait qu'il travaille la nuit. Master Blender et Gimp, mais il programme aussi.</p>
+                    <h3><a href="https://intra.epitech.eu/user/bastien.dhiver@epitech.eu/" target="_blank">Bastien Dhiver</a></h3>
+                    <h4>Monsieur Libre et Open Source</h4>
+                    <p>Homme de la situation en matière de sécurité, fier défenseur des projets libres/open source et promoteur du chiffrement, il ne dit pas crypter mais chiffrer.</p>
                 </div>
             </div>
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-right fade-in">
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
-                    <h3><a>Quentin Gasparotto</a></h3>
+                    <h3><a href="https://intra.epitech.eu/user/quentin.gasparotto@epitech.eu/" target="_blank">Quentin Gasparotto</a></h3>
                     <h4>Master Chorizo</h4>
                     <p>Fervent défenseur du label "fait maison", la légende raconte qu'il à un jour mangé un autre plat
                         que "pâtes au chorizo". Il prépare dans l'ombre un plan machiavélique afin de plonger l'humanité
@@ -144,7 +147,7 @@
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/victor.gouet.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
                 <div class="col-md-5 col-sm-5">
-                    <h3><a>Victor Gouet</a></h3>
+                    <h3><a href="https://intra.epitech.eu/user/victor.gouet@epitech.eu/" target="_blank">Victor Gouet</a></h3>
                     <h4>Super Salty</h4>
                     <p>Successeur de l'empire de Jose Bove. Défenseur du Trial Poursuite. Aspirant à devenir le meilleur dresseur.</p>
                 </div>
@@ -152,10 +155,10 @@
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-right fade-in">
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
-                    <h3><a href="https://fernandveyrier.github.io/">Fernand Veyrier</a></h3>
-                    <h4>Game Developer, Stagiaire Fullstack</h4>
+                    <h3><a href="https://intra.epitech.eu/user/fernand.veyrier@epitech.eu/" target="_blank">Fernand Veyrier</a></h3>
+                    <h4>Stagiaire Fullstack</h4>
                     <p>Passioné de jeu-vidéo, pro Unity. Il ne manquera pas de vous rappeler que le mot "Engine" se prononce
-                        ˈendʒɪn, ou encore N-Gine. Il est tellement diabolique que la légende raconte que Satan l'habite.</p>
+                        ˈendʒɪn, ou encore N-J-ne. Il est tellement diabolique que la légende raconte que Satan l'habite.</p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/fernand.veyrier.jpg" class="image-whoami-right image-fullsize center-div">
@@ -164,18 +167,18 @@
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-left fade-in">
                 <div class="col-md-3 col-sm-3">
-                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/bastien.dhiver.jpg" class="image-whoami-left image-fullsize center-div">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
                 <div class="col-md-5 col-sm-5">
-                    <h3><a>Bastien Dhiver</a></h3>
-                    <h4>Monsieur Libre et Open Source</h4>
-                    <p>Homme de la situation en matière de sécurité, fier défenseur des projets libres/open source et promoteur du chiffrement, il ne dit pas crypter mais chiffrer.</p>
+                    <h3><a href="https://intra.epitech.eu/user/nicolas.constanty@epitech.eu/" target="_blank">Nicolas Constanty</a></h3>
+                    <h4>Game Developer</h4>
+                    <p>Ses deux points communs avec Batman ? Sa couleur, et le fait qu'il travaille la nuit. Master Blender et Gimp, mais il programme aussi.</p>
                 </div>
             </div>
 
             <div class="col-md-12 col-sm-12 item-list-right fade-in">
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
-                    <h3><a>Adrien Wery</a></h3>
+                    <h3><a href="https://intra.epitech.eu/user/adrien.wery@epitech.eu/" target="_blank">Adrien Wery</a></h3>
                     <h4>Amoureux de la gastronomie</h4>
                     <p>Il ne manque aucune raclette, et il vénère Cinema4D. C'est toujours la boîte de nuit dans son casque !</p>
                 </div>
@@ -211,6 +214,10 @@
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
                         <a href="module.html">Implémenter un module</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="salty-studio.html">Team</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
