update team and links

--- a/discover.html
+++ b/discover.html
@@ -52,6 +52,9 @@
                     <a href="module.html">Implémenter un module</a>
                 </li>
                 <li>
+                    <a href="salty-studio.html">Team</a>
+                </li>
+                <li>
                     <a href="index.html#contact">Participer</a>
                 </li>
                 <li>
@@ -227,6 +230,10 @@
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
                         <a href="module.html">Implémenter un module</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="salty-studio.html">Team</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
