--- a/salty-studio.html
+++ b/salty-studio.html
@@ -83,7 +83,7 @@
             </div>
 
             <blockquote class="col-md-12">
-                Nous sommes une équipe de développeurs passionés, qui aime repousser les limites et s'investir au
+                Nous sommes une équipe de développeurs passionnés, qui aime repousser les limites et s'investir au
                 maximum dans les projets entrepris. Premièrement spécialisés dans le jeu-vidéo, nous
                 savons aussi nous diversifier et nous étendre dans d'autres domaines. Salty Studio n'en est pas à son
                 premier essai, et s'est illustré notamment grâce à divers projets comme l'Arcade, l'Indie Studio ou
@@ -108,7 +108,7 @@
                     <p>Clone du célèbre R-Type, il est possible d'y jouer jusqu'à 4, le tout en réseau.</p>
                 </div>
                 <div class="col-md-6">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/ivD8VdDHZgs" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/-BDjiOtn5oc" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
