--- a/module.html
+++ b/module.html
@@ -53,6 +53,9 @@
                     <a href="module.html">Implémenter un module</a>
                 </li>
                 <li>
+                    <a href="salty-studio.html">Team</a>
+                </li>
+                <li>
                     <a href="index.html#contact">Participer</a>
                 </li>
                 <li>
@@ -482,6 +485,10 @@ Module::IModule	*CreateModule(Module::ICore &core) {
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
                         <a href="module.html">Implémenter un module</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="salty-studio.html">Team</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
