--- a/salty-studio.html
+++ b/salty-studio.html
@@ -158,7 +158,7 @@
                     <h3><a href="https://intra.epitech.eu/user/fernand.veyrier@epitech.eu/" target="_blank">Fernand Veyrier</a></h3>
                     <h4>Stagiaire Fullstack</h4>
                     <p>Passioné de jeu-vidéo, pro Unity. Il ne manquera pas de vous rappeler que le mot "Engine" se prononce
-                        ˈendʒɪn, ou encore N-J-ne. Il est tellement diabolique que la légende raconte que Satan l'habite.</p>
+                        ˈendʒɪn, ou encore N-J-ne. Festivalier confirmé.</p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/fernand.veyrier.jpg" class="image-whoami-right image-fullsize center-div">
@@ -180,7 +180,7 @@
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
                     <h3><a href="https://intra.epitech.eu/user/adrien.wery@epitech.eu/" target="_blank">Adrien Wery</a></h3>
                     <h4>Amoureux de la gastronomie</h4>
-                    <p>Il ne manque aucune raclette, et il vénère Cinema4D. C'est toujours la boîte de nuit dans son casque !</p>
+                    <p>Il ne manque aucune raclette, et il vénère Cinema4D et le Go. C'est toujours la boîte de nuit dans son casque !</p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/adrien.wery.jpg" class="image-whoami-right image-fullsize center-div">
