On ne dit pas crypté mais chiffré

--- a/salty-studio.html
+++ b/salty-studio.html
@@ -135,7 +135,7 @@
                     <h4>Master Chorizo</h4>
                     <p>Fervent défenseur du label "fait maison", la légende raconte qu'il à un jour mangé un autre plat
                         que "pâtes au chorizo". Il prépare dans l'ombre un plan machiavélique afin de plonger l'humanité
-                        dans un bain de sang et d'épices le tout surmonté d'une pincée de romarin.</p>
+                        dans un bain de sang et d'épices le tout surmonté d'une branche de romarin.</p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/quentin.gasparotto.jpg" class="image-whoami-right image-fullsize center-div">
