--- a/module.html
+++ b/module.html
@@ -267,9 +267,8 @@ namespace Module {
                     <div class="col-md-6">
                         <p>Ce module va permettre toute la gestion des connexions réseau.</p>
                         <p><code class="prettyprint">Start()</code><br>Permet de lancer le réseau.</p>
-                        <p><code class="prettyprint">OnRequest()</code><br>Callback appelé lors de la reception
-                            d'une requête.</p>
-                        <p><code class="prettyprint">Send()</code><br>Envoie des messages sur le réseau.</p>
+                        <p><code class="prettyprint">Poll()</code><br>Gestion du réseau de manière non bloquante.</p>
+                        <p><code class="prettyprint">Run()</code><br>Gestion du réseau de manière bloquante.</p>
                     </div>
                 </div>
             </section>
