--- a/salty-studio.html
+++ b/salty-studio.html
@@ -113,7 +113,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row hidden-xs">
             <div class="col-md-12">
                 <h2>L'équipe</h2>
             </div>
@@ -157,8 +157,8 @@
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
                     <h3><a href="https://intra.epitech.eu/user/fernand.veyrier@epitech.eu/" target="_blank">Fernand Veyrier</a></h3>
                     <h4>Stagiaire Fullstack</h4>
-                    <p>Passioné de jeu-vidéo, pro Unity. Il ne manquera pas de vous rappeler que le mot "Engine" se prononce
-                        ˈendʒɪn, ou encore N-J-ne. Festivalier confirmé.</p>
+                    <p>Passioné de jeu-vidéo, pro Unity. Il ne manquera pas de vous rappeler que le mot "Engine" se
+                        prononce N-J-ne. Festivalier confirmé.</p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/fernand.veyrier.jpg" class="image-whoami-right image-fullsize center-div">
@@ -192,6 +192,88 @@
                     <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t31.0-8/13392248_1132273070163595_8577037019231394565_o.jpg?oh=f7d42fa546557aac11993feb485da368&oe=591A0B92" class="image-fullsize">
                 </div>
             </div>
+
+        </div>
+
+        <div class="row hidden-md hidden-lg hidden-sm">
+            <div class="col-md-12">
+                <h2>L'équipe</h2>
+            </div>
+
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-left fade-in">
+                <div class="col-md-3 col-sm-3">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/bastien.dhiver.jpg" class="image-whoami-left image-fullsize center-div">
+                </div>
+                <div class="col-md-5 col-sm-5 text-center">
+                    <h3><a href="https://intra.epitech.eu/user/bastien.dhiver@epitech.eu/" target="_blank">Bastien Dhiver</a></h3>
+                    <h4>Monsieur Libre et Open Source</h4>
+                    <p>Homme de la situation en matière de sécurité, fier défenseur des projets libres/open source et promoteur du chiffrement, il ne dit pas crypter mais chiffrer.</p>
+                </div>
+            </div>
+
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-right fade-in">
+                <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/quentin.gasparotto.jpg" class="image-whoami-right image-fullsize center-div">
+                </div>
+                <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4 text-center">
+                    <h3><a href="https://intra.epitech.eu/user/quentin.gasparotto@epitech.eu/" target="_blank">Quentin Gasparotto</a></h3>
+                    <h4>Master Chorizo</h4>
+                    <p>Fervent défenseur du label "fait maison", la légende raconte qu'il à un jour mangé un autre plat
+                        que "pâtes au chorizo". Il prépare dans l'ombre un plan machiavélique afin de plonger l'humanité
+                        dans un bain de sang et d'épices le tout surmonté d'une pincée de romarin.</p>
+                </div>
+            </div>
+
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-left fade-in">
+                <div class="col-md-3 col-sm-3">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/victor.gouet.jpg" class="image-whoami-left image-fullsize center-div">
+                </div>
+                <div class="col-md-5 col-sm-5 text-center">
+                    <h3><a href="https://intra.epitech.eu/user/victor.gouet@epitech.eu/" target="_blank">Victor Gouet</a></h3>
+                    <h4>Super Salty</h4>
+                    <p>Successeur de l'empire de Jose Bove. Défenseur du Trial Poursuite. Aspirant à devenir le meilleur dresseur.</p>
+                </div>
+            </div>
+
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-right fade-in">
+                <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/fernand.veyrier.jpg" class="image-whoami-right image-fullsize center-div">
+                </div>
+                <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4 text-center">
+                    <h3><a href="https://intra.epitech.eu/user/fernand.veyrier@epitech.eu/" target="_blank">Fernand Veyrier</a></h3>
+                    <h4>Stagiaire Fullstack</h4>
+                    <p>Passioné de jeu-vidéo, pro Unity. Il ne manquera pas de vous rappeler que le mot "Engine" se
+                        prononce N-J-ne. Festivalier confirmé.</p>
+                </div>
+            </div>
+
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-left fade-in">
+                <div class="col-md-3 col-sm-3">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-left image-fullsize center-div">
+                </div>
+                <div class="col-md-5 col-sm-5 text-center">
+                    <h3><a href="https://intra.epitech.eu/user/nicolas.constanty@epitech.eu/" target="_blank">Nicolas Constanty</a></h3>
+                    <h4>Game Developer</h4>
+                    <p>Ses deux points communs avec Batman ? Sa couleur, et le fait qu'il travaille la nuit. Master Blender et Gimp, mais il programme aussi.</p>
+                </div>
+            </div>
+
+            <div class="col-md-12 col-sm-12 item-list-right fade-in">
+                <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/adrien.wery.jpg" class="image-whoami-right image-fullsize center-div">
+                </div>
+                <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4 text-center">
+                    <h3><a href="https://intra.epitech.eu/user/adrien.wery@epitech.eu/" target="_blank">Adrien Wery</a></h3>
+                    <h4>Amoureux de la gastronomie</h4>
+                    <p>Il ne manque aucune raclette, et il vénère Cinema4D et le Go. C'est toujours la boîte de nuit dans son casque !</p>
+                </div>
+            </div>
+
+            <!--<div class="row">-->
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t31.0-8/13392248_1132273070163595_8577037019231394565_o.jpg?oh=f7d42fa546557aac11993feb485da368&oe=591A0B92" class="image-fullsize">
+                </div>
+            <!--</div>-->
 
         </div>
 
