--- a/salty-studio.html
+++ b/salty-studio.html
@@ -147,9 +147,9 @@
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/victor.gouet.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
                 <div class="col-md-5 col-sm-5">
-                    <h3><a href="https://intra.epitech.eu/user/victor.gouet@epitech.eu/" target="_blank">Victor Gouet</a></h3>
+                    <h3><a href="https://s-media-cache-ak0.pinimg.com/originals/b3/80/a5/b380a57821c1a7f97bf5d5dfe375443d.jpg" target="_blank">Victor Gouet</a></h3>
                     <h4>Super Salty</h4>
-                    <p>Successeur de l'empire de Jose Bove. Défenseur du Trial Poursuite. Aspirant à devenir le meilleur dresseur.</p>
+                    <p>Successeur de l'empire de José Bové. Défenseur du Trival Poursuite. Aspirant à devenir le meilleur dresseur.</p>
                 </div>
             </div>
 
