--- a/salty-studio.html
+++ b/salty-studio.html
@@ -144,10 +144,10 @@
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-left fade-in">
                 <div class="col-md-3 col-sm-3">
-                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/victor.gouet.jpg" class="image-whoami-left image-fullsize center-div">
+                    <img src="http://i.istockimg.com/file_thumbview_approve/16779912/3/stock-photo-16779912-asian-short-clawed-otter-amblonyx-cinereus-eating-fish.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
                 <div class="col-md-5 col-sm-5">
-                    <h3><a href="https://s-media-cache-ak0.pinimg.com/originals/b3/80/a5/b380a57821c1a7f97bf5d5dfe375443d.jpg" target="_blank">Victor Gouet</a></h3>
+                    <h3><a href="https://intra.epitech.eu/user/victor.gouet@epitech.eu/" target="_blank">Victor Gouet</a></h3>
                     <h4>Super Salty</h4>
                     <p>Successeur de l'empire de José Bové. Défenseur du Trival Poursuite. Aspirant à devenir le meilleur dresseur.</p>
                 </div>
