Updated two member images (kindly asked by Sir Gouet)

--- a/salty-studio.html
+++ b/salty-studio.html
@@ -144,7 +144,8 @@
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-left fade-in">
                 <div class="col-md-3 col-sm-3">
-                    <img src="http://i.istockimg.com/file_thumbview_approve/16779912/3/stock-photo-16779912-asian-short-clawed-otter-amblonyx-cinereus-eating-fish.jpg" class="image-whoami-left image-fullsize center-div">
+                    <img style="max-height: 190px"
+                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Sea_Otter_%28Enhydra_lutris%29_%2825169790524%29_crop.jpg/220px-Sea_Otter_%28Enhydra_lutris%29_%2825169790524%29_crop.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
                 <div class="col-md-5 col-sm-5">
                     <h3><a href="https://intra.epitech.eu/user/victor.gouet@epitech.eu/" target="_blank">Victor Gouet</a></h3>
@@ -161,7 +162,7 @@
                         prononce N-J-ne. Festivalier confirmé.</p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
-                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/fernand.veyrier.jpg" class="image-whoami-right image-fullsize center-div">
+                    <img src="https://dnai.io/static/images/team/fernand.jpg" class="image-whoami-right image-fullsize center-div" style="max-height: 190px">
                 </div>
             </div>
 
